# ekai-chat

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  rebrand.py  test_install.py  verify_attribution.py
ekai/: __init__.py  analytics.py  args.py  args_formatter.py  commands.py  copypaste.py  editor.py  exceptions.py  gui.py  help.py  help_pats.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  prompts.py  repo.py  repomap.py  report.py  scrape.py  sendchat.py  urls.py  utils.py  versioncheck.py  voice.py  watch.py
ekai/coders/: __init__.py  base_coder.py  editor_editblock_prompts.py  help_coder.py  search_replace.py  wholefile_func_coder.py
ekai/coders/coders/: architect_coder.py  base_prompts.py  editblock_coder.py  editblock_prompts.py  help_prompts.py  single_wholefile_func_coder.py  wholefile_coder.py
ekai/queries/tree-sitter-languages/queries/tree-sitter-languages/: README.md
ekai/resources/: __init__.py  model-settings.yml
ekai/website/website/: HISTORY.md  _config.yml  index.md
ekai/website/website/_data/website/_data/: architect.yml  blame.yml  code-in-json.yml  deepseek-down.yml  edit_leaderboard.yml  o1_polyglot_leaderboard.yml  o1_results.yml  polyglot_leaderboard.yml  quant.yml  qwq.yml  r1_architect.yml  refactor_leaderboard.yml  sonnet-fine.yml
ekai/website/website/_includes/website/_includes/: blame.md  code-in-json-benchmark.js  code-in-json-syntax.js  get-started.md  head_custom.html  help-tip.md  help.md  keys.md  leaderboard.js  leaderboard_graph.html  model-warnings.md  multi-line.md  nav_footer_custom.html  python-m-aider.md  quant-chart.js  qwq-chart.js  replit-pipx.md  works-best.md
ekai/website/website/blog/website/blog/: index.html
(+116 files in other folders)
